# mCRL2-sys

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
cpp/: atermpp.h  data.h  exception.h  log.h  lps.cpp  lps.h  pbes.cpp  pbes.h
src/: atermpp.rs  data.rs  lib.rs  log.rs  lps.rs  pbes.rs
